# dash-app-template

./: README.md  TODO.md  mantine-playground.ipynb  pyproject.toml  run.sh
app/: app.py  config.py
app/assets/: style.css
app/callbacks/: navbar_callbacks.py  page_2_callbacks.py  page_3_callbacks.py  page_5_callbacks.py  page_6_callbacks.py  page_7_callbacks.py
app/components/: footer.py  header.py  navbar.py  ui_cards.py  ui_modal.py  ui_tables.py  ui_textbox.py
app/pages/: page_1_home.py  page_2_analytics.py  page_3_settings.py  page_404_not_found.py  page_4_about.py  page_5_contact.py  page_6_chat.py  page_7_machine_learning.py
app/utils/: db_queries.py  graphs.py  graphs_test.ipynb
docs/: sample-react-code.js
