[tool.poetry]
name = "dash-app-template"
version = "0.1.0"
description = ""
authors = ["Nontas Georgitsaros <x.georgitsaros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
dash = "^2.11.1"
plotly = "^5.15.0"
seaborn = "^0.12.2"
dash-table = "^5.0.0"
dash-auth = "^2.0.0"
dash-mantine-components = "^0.12.1"
dash-iconify = "^0.1.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
